# crucible

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  crucible-arquitetura.md  docker-compose.runtime.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-docker.yml  publish-python.yml  publish-vscode.yml
docs/: api.md  architecture.md  cli.md  concepts.md  configuration.md  dashboard.md  development.md  docker.md  gabaritos-and-assertions.md  how-it-works.md  implementation.md  importers-and-exports.md  index.md  interfaces.md  operations.md  plugins.md  providers.md  quickstart.md  release.md  scoring.md  sdk.md  technical-decisions.md  usage.md  user-guide.md
docs/guides/: ci.md  llm-as-judge.md  model-comparison.md  plugins.md  provider-cache.md  sdk.md  simple-prompt.md  structured-json.md  train-val-test.md
docs/tutorials/: customer-support-end-to-end.md
examples/basic/: config.yaml  gabarito.yaml  prompt.txt
examples/customer-support-triage/: config.yaml  gabarito.yaml  prompt.txt
examples/llm-judge-risk/: config.yaml  gabarito.yaml  prompt.txt
examples/model-comparison/: README.md  config.yaml  gabarito.yaml  prompt.txt
examples/structured-output/: README.md  config.ollama.yaml  config.openai-responses.yaml  gabarito.yaml  (+3 more)
scripts/: quickstart-real-provider.sh  release-check.sh
tests/: test_adapters.py  test_api.py  test_assertions.py  test_cli.py  test_main.py  test_models_and_scoring.py  test_optimizer.py  test_provider_smoke.py  test_web.py
vscode-extension/: LICENSE  README.md  package-lock.json  package.json
(+43 files in other folders)
