[project]
name = "crucible"
version = "0.1.0"
description = "Prompt optimization framework driven by empirical gabaritos."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "structlog>=25.5.0",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "types-jsonschema>=4.25.1.20251126",
    "types-PyYAML>=6.0.12.20250915",
]

[project.optional-dependencies]
distributed = [
    "dask[distributed]>=2024.12.0",
    "ray>=2.40.0",
]

[project.scripts]
crucible = "crucible.main:run_cli"

[tool.hatch.build.targets.sdist]
include = ["src/crucible"]

[tool.hatch.build.targets.wheel]
include = ["src/crucible"]

[tool.hatch.build.targets.wheel.sources]
"src/crucible" = "crucible"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=crucible --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
